sm8150-common: wifi: set gEnableConcurrentSTA=wlan1 for STA+AP
Signed-off-by: SGCMarkus <markusornik@gmail.com>

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -546,6 +546,9 @@ wake_lock_in_user_scan=1
 # Global : 149~161 channels used for P2P GO (LGE_CHANGE)
 etsi13_srd_chan_in_master_mode=1
 
+#Add another interface while driver load
+gEnableConcurrentSTA=wlan1
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
