--- a/wifi/wpa_supplicant_overlay.conf
+++ b/wifi/wpa_supplicant_overlay.conf
@@ -1,4 +1,6 @@
-disable_scan_offload=1 
+disable_scan_offload=1
 p2p_disabled=1
 wowlan_triggers=magic_pkt
 tdls_external_control=1
+bss_max_count=400
+interworking=1
