--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -121,6 +121,9 @@ BandCapability=0
 #Channel Bonding
 gChannelBondingMode5GHz=1
 
+#Configures Channel Bonding in 24 GHz
+gChannelBondingMode24GHz=1
+
 #Say gGoKeepAlivePeriod(5 seconds) and gGoLinkMonitorPeriod(10 seconds).
 #For every 10 seconds DUT send Qos Null frame(i.e., Keep Alive frame if link
 #is idle for last 10 seconds.) For both active and power save clients.
