--- a/rootdir/etc/init/init.lge.vendor.on_post_fs_data.rc
+++ b/rootdir/etc/init/init.lge.vendor.on_post_fs_data.rc
@@ -91,8 +91,8 @@ on post-fs-data
     restorecon_recursive /mnt/vendor/power
     restorecon /oem
     restorecon_recursive /oem
-    restorecon /oem/OP
-    restorecon_recursive /oem/OP
+    restorecon /product/OP
+    restorecon_recursive /product/OP
 
     #Widevine firmware copy
     exec - system system -- /vendor/bin/cpfirmware widevine /mnt/vendor/persist-lg/firmware
