--- a/rootdir/etc/init/hw/init.target.rc
+++ b/rootdir/etc/init/hw/init.target.rc
@@ -62,9 +62,9 @@ on post-fs
     start vendor.spdaemon
     start vendor.sec_nvm
 
-on late-fs
-    wait_for_prop hwservicemanager.ready true
-    exec_start wait_for_keymaster
+#on late-fs
+#    wait_for_prop hwservicemanager.ready true
+#     exec_start wait_for_keymaster
 #    mount_all /vendor/etc/fstab.qcom --late
 
 on post-fs-data
