sm8150-common: let the power hal handle the tap2wake
example for touch driver:
https://github.com/SGCMarkus/android_kernel_lge_sm8150/commit/ae1acf5449ed2494b8db0691671bfec21a599b7f

--- a/rootdir/etc/init/init.lge.vendor.on_boot.rc
+++ b/rootdir/etc/init/init.lge.vendor.on_boot.rc
@@ -73,6 +73,11 @@ on boot
 	chmod 664 /sys/devices/virtual/input/lge_touch/secure_touch_devinfo
 # End secure_touch
 
+# START tap2wake
+    chown system system /sys/devices/virtual/input/lge_touch/tap2wake
+    chmod 664 /sys/devices/virtual/input/lge_touch/tap2wake
+# END tap2wake
+
 # CoverDisplay
 	chown system system /sys/devices/platform/soc/a80000.spi/spi_master/spi1/spi1.2/fw
 	chmod 664 /sys/devices/platform/soc/a80000.spi/spi_master/spi1/spi1.2/fw
