--- a/rootdir/etc/init/hw/init.qcom.rc
+++ b/rootdir/etc/init/hw/init.qcom.rc
@@ -209,6 +209,8 @@ on boot
     mkdir /data/vendor/sensors
     chown system system /data/vendor/sensors
 
+    start zramswapon
+
 # msm specific files that need to be created on /data
 on post-fs-data
     mkdir /data/vendor/misc 01771 system system
@@ -779,3 +781,9 @@ service vendor.contexthub-hal-1-0 /vendor/bin/hw/android.hardware.contexthub@1.0
     user system
     group system
     disabled
+
+service zramswapon /vendor/bin/init.lge.zramswap.sh start
+	user root
+	group system
+	disabled
+	oneshot
