--- a/rootdir/etc/init/hw/init.lge.audio.rc
+++ b/rootdir/etc/init/hw/init.lge.audio.rc
@@ -1,6 +1,4 @@
-#! /vendor/bin/sh
-
-# Copyright (c) 2013, The Linux Foundation. All rights reserved.
+# Copyright (c) 2009-2012, The Linux Foundation. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -9,7 +7,7 @@
 #     * Redistributions in binary form must reproduce the above copyright
 #       notice, this list of conditions and the following disclaimer in the
 #       documentation and/or other materials provided with the distribution.
-#     * Neither the name of Linux Foundation nor
+#     * Neither the name of The Linux Foundation nor
 #       the names of its contributors may be used to endorse or promote
 #       products derived from this software without specific prior written
 #       permission.
@@ -27,8 +25,8 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-baseband=`getprop ro.baseband`
-if [ "$baseband" = "mdm" ] || [ "$baseband" = "mdm2" ]; then
-	start vendor.mdm_helper
-fi
+#on property:init.svc.vendor.ssr_setup=stopped
+#	write /sys/bus/msm_subsys/devices/subsys1/restart_level system
 
+on post-fs
+	mkdir /mnt/vendor/persist-lg/audio 0766 audioserver audioserver
