--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -1,11 +1,23 @@
 # This file allows user to override the factory
 # defaults for the WLAN Driver
 
+# Enable Wi-Fi host driver log
+wlanLoggingEnable=1
+gMulticastHostFwMsgs=1
+qdf_trace_enable_hdd=255
+qdf_trace_enable_sme=255
+qdf_trace_enable_pe=255
+
 # Enable IMPS or not
 gEnableImps=1
 
 # Enable BMPS or not
 gEnableBmps=1
+
+# NAN
+gEnableNanSupport=1
+genable_nan_datapath=1
+gnan_datapath_ndi_channel=6
 
 # Phy Mode (auto, b, g, n, etc)
 # Valid values are 0-9, with 0 = Auto, 4 = 11n, 9 = 11ac
@@ -77,14 +89,14 @@ g11hSupportEnabled=1
 gEnableDFSMasterCap=1
 
 # ESE Support and fast transition
-EseEnabled=0
+EseEnabled=1
 
 ImplicitQosIsEnabled=0
 
 gNeighborScanTimerPeriod=200
 gNeighborLookupThreshold=85
-gNeighborScanChannelMinTime=20
-gNeighborScanChannelMaxTime=30
+gNeighborScanChannelMinTime=40
+gNeighborScanChannelMaxTime=70
 gMaxNeighborReqTries=3
 
 # Legacy (non-ESE, non-802.11r) Fast Roaming Support
@@ -96,7 +108,7 @@ FastRoamEnabled=1
 # terms of RSSI.  Checking is disabled if set to Zero.Otherwise it will
 # use this value as to how better the RSSI of the new/roamable AP should
 # be for roaming
-RoamRssiDiff=5
+RoamRssiDiff=15
 
 # To enable, set gRoamIntraBand=1 (Roaming within band)
 # To disable, set gRoamIntraBand=0 (Roaming across band)
@@ -110,7 +122,7 @@ gShortGI40Mhz=1
 gAPAutoShutOff=0
 
 #Auto Shutdown wlan : Value in Seconds. 0 means disabled. Max 1 day = 86400 sec
-gWlanAutoShutdown = 0
+gWlanAutoShutdown=0
 
 # Not used.
 gApAutoChannelSelection=0
@@ -121,8 +133,11 @@ BandCapability=0
 #Channel Bonding
 gChannelBondingMode5GHz=1
 
-#Configures Channel Bonding in 24 GHz
+#Channel Bonding in 2.4Ghz
 gChannelBondingMode24GHz=1
+
+#Enable Keep alive with non-zero period value
+gStaKeepAlivePeriod=30
 
 #Say gGoKeepAlivePeriod(5 seconds) and gGoLinkMonitorPeriod(10 seconds).
 #For every 10 seconds DUT send Qos Null frame(i.e., Keep Alive frame if link
@@ -146,8 +161,8 @@ gChannelBondingMode24GHz=1
 #are succeed to send or not. Hence total effective detection time is
 # (gGoLinkMonitorPeriod + gGoKeepAlivePeriod) /
 # (gApLinkMonitorPeriod + gApKeepAlivePeriod)
-gGoKeepAlivePeriod = 20
-gApKeepAlivePeriod = 20
+gGoKeepAlivePeriod=20
+gApKeepAlivePeriod=20
 
 #If set will start with active scan after driver load, otherwise will start with
 #passive scan to find out the domain
@@ -170,14 +185,14 @@ gDataInactivityTimeout=200
 # Valid values are 1,2
 # Set gSetTxChainmask1x1=1 or gSetRxChainmask1x1=1 to select chain0.
 # Set gSetTxChainmask1x1=2 or gSetRxChainmask1x1=2 to select chain1.
-gSetTxChainmask1x1=1
-gSetRxChainmask1x1=1
+gSetTxChainmask1x1=2
+gSetRxChainmask1x1=2
 
 # Scan Timing Parameters
 # gPassiveMaxChannelTime=110
 # gPassiveMinChannelTime=60
-gActiveMaxChannelTime=40
-gActiveMinChannelTime=20
+# gActiveMaxChannelTime=40
+# gActiveMinChannelTime=20
 
 #If set to 0, MCC is not allowed.
 gEnableMCCMode=1
@@ -189,7 +204,7 @@ gEnableMCCMode=1
 # 3-Force SCC if same band, without SAP restart by sending (E)CSA
 # 4-Force SCC if same band (or) use SAP mandatory channel for DBS,
 #   without SAP restart by sending (E)CSA
-gWlanMccToSccSwitchMode = 3
+gWlanMccToSccSwitchMode=4
 
 # 1=enable STBC; 0=disable STBC
 gEnableRXSTBC=1
@@ -214,10 +229,13 @@ gEnableTxBFin20MHz=1
 #Enable/Disable SU Tx beamformer support.
 gEnableTxSUBeamformer=1
 
+#Enable thermal mitigation
+gThermalMitigationEnable=0
+
 gEnableFastRoamInConcurrency=1
 
 #Maxium Channel time in msec
-gMaxMediumTime = 6000
+gMaxMediumTime=6000
 
 # 802.11K support
 gRrmEnable=1
@@ -227,7 +245,6 @@ gEnablePowerSaveOffload=4
 
 #Enable firmware uart print
 gEnablefwprint=0
-
 # Firmware log mode
 # Valid values are 0,1,2
 # 0=Disable, 1=WMI, 2=DIAG
@@ -257,7 +274,11 @@ gVhtMpduLen=2
 gEnableMCCAdaptiveScheduler=1
 
 #Enable or Disable p2p device address administered
-isP2pDeviceAddrAdministrated=0
+isP2pDeviceAddrAdministrated=1
+
+# Set Thermal Power limit
+TxPower2g=10
+TxPower5g=10
 
 # Remove Overlap channel restriction
 gEnableOverLapCh=0
@@ -297,7 +318,7 @@ gEnableGreenAp=0
 # Radar PRI multiplier
 gDFSradarMappingPriMultiplier=4
 
-gPNOScanSupport=1
+gPNOScanSupport=0
 
 #Enable/Disable LPASS support
 # 0 to disable, 1 to enable
@@ -305,6 +326,9 @@ gEnableLpassSupport=1
 
 # Whether userspace country code setting shld have priority
 gCountryCodePriority=1
+
+# Enable(1)/Disable(0) SIFS burst
+gEnableSifsBurst=1
 
 # Enable or Disable Multi-user MIMO
 # 1=Enable (default), 0=Disable
@@ -349,9 +373,10 @@ gTDLSExternalControl=1
 # TDLS off-channel operation will be invoked when there is only one
 # TDLS connection.
 gEnableTDLSOffChannel=1
+gEnableTDLSScan=1
 
 # Enable or Disable Random MAC (Spoofing)
-# 1=Enable (default), 0=Disable
+# 1=Enable, 0=Disable (default)
 gEnableMacAddrSpoof=1
 
 ################ Datapath feature set Begin ################
@@ -397,6 +422,7 @@ gCEClassifyEnable=1
 
 # Enable Rx handling options
 # Rx_thread=1 RPS=2(default for ROME) NAPI=4(default for ihelium)
+# case #03295773, changed 4->5 ( 5 = Rx_thread+NAPI )
 rx_mode=5
 
 # Enable(Tx) fastpath for data traffic.
@@ -411,36 +437,17 @@ gEnableIpTcpUdpChecksumOffload=1
 # 1 - enable  0 - disable
 TSOEnable=1
 
-# Enable Generic Receive Offload
+# LGE_CHAGE_S, protocol-wifi@lge.com, 2018-03-12, 5G Throughput configuration for SDM 845
+# Enable Large Recieve Offload
 # 1 - enable(default)  0 - disable
-GROEnable=1
-
-# Enable HT MPDU Density
-# 4 for 2 micro sec
-ght_mpdu_density=4
+#LROEnable=1
+# LGE_CHAGE_E, protocol-wifi@lge.com, 2018-03-12, 5G Throughput configuration for SDM 845
 
 # Enable flow steering to enable multiple CEs for Rx flows.
 # Multiple Rx CEs<==>Multiple Rx IRQs<==>probably different CPUs.
 # Parallel Rx paths.
 # 1 - enable 0 - disable(default)
 gEnableFlowSteering=1
-
-# Time in microseconds after which a NAPI poll must yield
-ce_service_max_yield_time=500
-
-#Maximum number of HTT messages to be processed per NAPI poll
-ce_service_max_rx_ind_flush=1
-
-# Maximum number of MSDUs the firmware will pack in one HTT_T2H_MSG_TYPE_RX_IN_ORD_PADDR_IND
-maxMSDUsPerRxInd=8
-
-# Enable NUD tracking feature
-# 1 - enable 0 - disable(default)
-gEnableNUDTracking=1
-
-# Enable PEER UNMAP CONF SUPPORT
-# 1 - enable 0 - disable(default)
-gEnablePeerUnmapConfSupport=1
 
 ################ Datapath feature set End ################
 
@@ -449,35 +456,95 @@ gEnablePeerUnmapConfSupport=1
 # Enable NAN discovery (NAN 1.0)
 # 1 - enable  0 - disable(default)
 gEnableNanSupport=1
-# Enable NAN Datapath
-genable_nan_datapath=1
-
 ################ NAN feature set end #####################
 
-adaptive_dwell_mode_enabled=1
+# LGE_CHANGE_S, [WiFi][kwisuk.kwon@lge.com], 2014-12-3, To adjust scan dwell time
+gActiveMaxChannelTime=90
+gActiveMinChannelTime=60
+gActiveMaxChannelTimeConc=90
+gActiveMinChannelTimeConc=60
+gPassiveMaxChannelTime=130
+# LGE_CHANGE_E, [WiFi][kwisuk.kwon@lge.com], 2014-12-3, To adjust scan dwell time
 
-hostscan_adaptive_dwell_mode=1
+FastTransitionEnabled=1
+gEnableFWRssiMonitoring=1
+gRoamScanOffloadEnabled=1
+gEnableSNRMonitoring=0
 
-adapt_dwell_lpf_weight=80
+gDualMacFeatureDisable=0
+gEnableANI=1
 
-adapt_dwell_wifi_act_threshold=10
+# LGE_CHANGE_S, [moon-wifi@lge.com], 2017.07.18, Set default HeartBeat value
+gRoamBmissFirstBcnt=20
+gRoamBmissFinalBcnt=20
+# LGE_CHANGE_E, [moon-wifi@lge.com], 2017.07.18, Set default HeartBeat value
 
-MAWCEnabled=0
+gEnableConnectedScan=1
 
-# Enable/Disable rtt sta mac randomization
-enable_rtt_mac_randomization=1
+gActiveModeOffload=1
 
-#Enable/Disable SNR monitoring
-gEnableSNRMonitoring=1
+gScanBackoffMultiplier=2
 
-# Set IPA low/med/high bandwidth mbps
-gIPALowBandwidthMbps=100
-gIPAMediumBandwidthMbps=400
-gIPAHighBandwidthMbps=800
+# WLAN recovery from abnormal status
+gEnableSelfRecovery=1
 
-# Enable/Disable force bandwidth voting during IPA suspend
-gIPAForceVotingEnable=1
-spectral_disable=1
+# disable PER based roaming in FW
+gper_roam_enabled=0
+
+# LGE_CHANGE_S, [moon-wifi@lge.com], 2017-07-31, disable HW DTIM (HW DTIM decreases RSSI)
+gEnableLPRx=0
+# LGE_CHANGE_E, [moon-wifi@lge.com], 2017-07-31, disable HW DTIM (HW DTIM decreases RSSI)
+
+# fix miracast issue
+arp_ac_category=0
+
+# LGE_CHANGE_S, [moon-wifi@lge.com], 2017-06-26, enalbe LAA feature (antenna sharing)
+gVdevTypeNss_5g=43690
+# LGE_CHANGE_E, [moon-wifi@lge.com], 2017-06-26, enalbe LAA feature (antenna sharing)
+
+# LGE_CHANGE_S, [moon-wifi@lge.com], 2018-02-28, Do not adjust tcp_adv_win_scale
+gTcpAdvWinScaleEnable=0
+# LGE_CHANGE_E, [moon-wifi@lge.com], 2018-02-28, Do not adjust tcp_adv_win_scale
+
+# LGE_CHANGE, 2018-03-08, Do not adjust tcp_limit_output_bytes
+gTcpLimitOutputEnable=0
+
+# LGE_CHAGE_S, protocol-wifi@lge.com, 2018-03-12, 5G Throughput configuration for SDM 845
+GROEnable=1
+# LGE_CHAGE_E, protocol-wifi@lge.com, 2018-03-12, 5G Throughput configuration for SDM 845
+
+# LGE_CHAGE, protocol-wifi@lge.com, 2018-04-11, disable MCS9 for 2.4GHz
+enable_vht20_mcs9=0
+
+# LGE_CHANGE, 2018-07-26, allow L2 roaming under -76dB(roam_bg_scan_bad_rssi_thresh)
+roam_bad_rssi_thresh_offset_2g=0
+
+# For Dynamic DTIM
+gEnableModulatedDTIM=1
+#max LI value for modulated DTIM
+gMaxLIModulatedDTIM=6
+
+# LGE_CHANGE_S, 2018-11-15, ActionOUICCM
+gActionOUICCKM1X1 = FFFFFF 00 02 000102030405 FC
+# LGE_CHANGE_E, 2018-11-15, ActionOUICCM
+
+# LGE_CHANGE_S, [protocol-wifi@lge.com], 2018-11-19, Enable SAP11AC
+gSAP11ACOverride=1
+# LGE_CHANGE_E, [protocol-wifi@lge.com], 2018-11-19, Enable SAP11AC
+
+# LGE_CHANGE, protocol-wifi@lge.com, 2018-11-20, change kickout event threshold QCT#03738140
+gDroppedPktDisconnectTh=2047
+
+# LGE_CHANGE_S, [protocol-wifi@lge.com], 2018-12-17, reports linkspeed max scaled
+gReportMaxLinkSpeed=2
+# LGE_CHANGE_E, [protocol-wifi@lge.com], 2018-12-17, reports linkspeed max scaled
+
+# LGE_CHANGE_S, [protocol-wifi@lge.com], 2019-01-18, Enable scanlock
+wake_lock_in_user_scan=1
+# LGE_CHANGE_E, [protocol-wifi@lge.com], 2019-01-18, Enable scanlock
+
+# Global : 149~161 channels used for P2P GO (LGE_CHANGE)
+etsi13_srd_chan_in_master_mode=1
 
 #Add another interface while driver load
 gEnableConcurrentSTA=wlan1
@@ -493,3 +560,4 @@ gSelect5GHzMargin=3
 END
 
 # Note: Configuration parser would not read anything past the END marker
+
